⚡️ perf: 캐싱 레이어 설정 (마이크로 서비스 호출 제거)